manifests/calicoctl-etcd.yaml
# Calico Version master
# https://projectcalico.docs.tigera.io/releases#master
# This manifest includes the following component versions:
#   calico/ctl:master

apiVersion: v1
kind: Pod
metadata:
  name: calicoctl
  namespace: kube-system
spec:
  nodeSelector:
    kubernetes.io/os: linux
  hostNetwork: true
  containers:
    - name: calicoctl
      image: quay.io/calico/ctl:v3.33.0
      command:
        - calicoctl
      args:
        - version
        - --poll=1m
  volumes:
    # If you're using TLS enabled etcd uncomment the following.
    # - name: etcd-certs
    #   secret:
    #     secretName: calico-etcd-secrets
