manifests/apiserver.yaml
# This is a tech-preview manifest which installs the Calico API server. Note that this manifest is liable to change
# or be removed in future releases without further warning.
#
# Namespace and namespace-scoped resources.
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: calico-apiserver
  name: calico-apiserver
spec:

---
# Policy to ensure the API server isn't cut off. Can be modified, but ensure
# that the main API server is always able to reach the Calico API server.
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-apiserver
  namespace: calico-apiserver
spec:
  podSelector:
    matchLabels:
      apiserver: "true"
  ingress:
    - ports:
        - protocol: TCP
          port: 5443

---
apiVersion: v1
kind: Service
metadata:
  name: calico-api
  namespace: calico-apiserver
spec:
  ports:
    - name: apiserver
      port: 443
      protocol: TCP
      targetPort: 5443
  selector:
    apiserver: "true"
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    apiserver: "true"
    k8s-app: calico-apiserver
  name: calico-apiserver
  namespace: calico-apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      apiserver: "true"
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        apiserver: "true"
        k8s-app: calico-apiserver
      name: calico-apiserver
      namespace: calico-apiserver
    spec:
      containers:
        - args:
            - --secure-port=5443
            - -v=5
          image: quay.io/calico/apiserver:v3.33.0
          name: calico-apiserver
          readinessProbe:
            httpGet:
              path: /readyz
              port: 5443
              scheme: HTTPS
            timeoutSeconds: 5
            periodSeconds: 60
          securityContext:
            privileged: false
            runAsUser: 0
          volumeMounts:
            - mountPath: /code/apiserver.local.config/certificates
              name: calico-apiserver-certs
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      restartPolicy: Always
      serviceAccount: calico-apiserver
      serviceAccountName: calico-apiserver
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
      volumes:
        - name: calico-apiserver-certs
          secret:
            secretName: calico-apiserver-certs
